# GSS-mol

./: .gitignore  CLI-REFERENCE.md  LICENSE  README.md  pyproject.toml
config/: sample.yaml
gss_mol/: cli.py
scripts/: rss.sh  sample.sh
src/: ani_calculator.py  batch_relaxer.py  calc_dihedral_energy.py  calculators.py  plot_aspirin.py  rss_sample.py  uff_calculator.py  uma_calculator.py
src/model/: __init__.py  guide_utils.py  lit_model.py  utils.py
src/model/equiformer_v2/: drop.py  edge_rot_mat.py  equiformer_v2.py  input_block.py  layer_norm.py  so2_ops.py  transformer_block.py
src/utils/: aspirin_bond_util.py  aspirin_data_with_bond.py  utils_.py
